--- a/workspace/ims-client/src/app/buckwaframework/common/components/condition/condition.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/common/components/condition/condition.component.html
@@ -82,7 +82,7 @@
       บันทึก
     </button>
     <button class="ui mini primary button width-100" (click)="cancel()">
-      <i class="cencel icon"></i>
+      <i class="close icon"></i>
       ยกเลิก
     </button>
   </div>
