--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-1/int08-1-6/int08-1-6.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-1/int08-1-6/int08-1-6.component.html
@@ -171,7 +171,7 @@
 
     <div class="ui attached segment">
       <div class="ui form">
-        <condition [riskId]="id" (out)="closeConditionRL($event)"></condition>
+        <condition [riskId]="id" [riskType]="'OTHER'" [page]="'int08-1-6'" (out)="closeConditionRL($event)"></condition>
       </div>
       <br/>
 
