--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-1/int08-1-4/int08-1-4.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-1/int08-1-4/int08-1-4.component.html
@@ -24,8 +24,10 @@
         <table id="dataTable" class="ui small celled table">
           <thead>
             <tr>
-              <th>ลำดับ</th>
-              <th>ปัจจัยเสี่ยง</th>
+
+              <th>ที่</th>
+              <th>ชื่อกระดาษทำการ</th>
+
               <th>ปีงบประมาณ</th>
               <th>วันที่สร้าง</th>
               <th>ผู้สร้าง</th>
@@ -42,7 +44,7 @@
               <i class="save icon"></i>
               บันทึก
             </button>
-            <button class="ui mini primary button" (click)="addRiskAssRiskWsHdr()">
+            <button class="ui mini primary button" (click)="configAllCondition()">
               กำหนดเงื่อนไขปัจจัยเสี่ยงรวม
             </button>
             <button class="ui mini primary button" (click)="cancelFlow()">
