--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/operate-tax-audit/ope04/ope04-2/ope04-2.component.css
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/operate-tax-audit/ope04/ope04-2/ope04-2.component.css
@@ -2,8 +2,26 @@ tr td:nth-child(1) {
     text-align: center;
 }
 
-tr td:nth-child(3), td:nth-child(4), td:nth-child(5), 
-td:nth-child(6), td:nth-child(7), td:nth-child(8), 
+tr td:nth-child(3),
+td:nth-child(4),
+td:nth-child(5),
+td:nth-child(6),
+td:nth-child(7),
+td:nth-child(8),
 td:nth-child(9) {
     text-align: right;
+}
+
+
+/* button upload file */
+
+.inputfile {
+    padding-right: 25px !important;
+    padding-left: 40px !important;
+}
+
+.butt-upload {
+    position: absolute;
+    top: 8px;
+    left: 217px;
 }
