--- a/workspace/ims-client/src/app/buckwaframework/project/pages/select-form/select-form.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/pages/select-form/select-form.component.html
@@ -1,6 +1,6 @@
 <div class="ui grid">
     <div class="sixteen wide column">
-        <h2 class="ui header">สร้างกระดาษทำการ</h2> 
+        <h2 class="ui header">สร้างกระดาษทำการ</h2>
         <div class="ui segment">
             <div class="ui grid">
                 <div class="seven wide column">
@@ -289,3 +289,4 @@
 
         </div>
     </div>
+</div>>
